# Rust-Svelte5-SSG-Embeded-Template

./: .env  Cargo.toml  fuji.db
src/: content_type.rs  main.rs
src/svelte/: package-lock.json  package.json  svelte.config.js
