[package]
name = "cv"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
mime_guess = "2.0.5"
rust-embed = "8.5.0"
tokio = { version = "1.40.0", features = ["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }
dotenvy = "0.15"
anyhow = "1.0"
tower-http = { version = "0.5.0", features = ["fs", "compression-br", "set-header"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "3"
panic = "abort"
codegen-units = 1

[build]
rustflags = ["-C", "target-cpu=native"]
